# Agent-Sitecore-AI-Automation

./: .gitignore
sitecore-ai-automation/adaptive-agent-orchestrator/: .gitignore  README.md  cli.py  langgraph.json  pyproject.toml  visualize.py
sitecore-ai-automation/adaptive-agent-orchestrator/.langgraph_api/: .langgraph_ops.pckl
sitecore-ai-automation/adaptive-agent-orchestrator/config/: skill-map.yaml  websites.yaml
sitecore-ai-automation/adaptive-agent-orchestrator/graphs/: __init__.py  create_component.py  create_page.py  deploy.py  environment_discovery.py  fix_agent.py  full_pipeline.py  preflight.py  sitecore_workflow.py  smart_router.py
sitecore-ai-automation/adaptive-agent-orchestrator/nodes/: __init__.py  generator.py  memory_manager.py  sample_loader.py  shell_executor.py  skill_loader.py  validator.py  website_tracker.py
sitecore-ai-automation/adaptive-agent-orchestrator/state/: __init__.py  schemas.py
sitecore-ai-automation/scrapper/: CLAUDE-root.md  CLAUDE.md  component-info-sheet.md  package-lock.json  package.json  pyproject.toml
sitecore-ai-automation/scrapper/Research papers/: HTML to Design Tokens_ Pixel Perfect.md  compass_artifact_wf-fc3fc714-f870-418d-9824-adb384c989cb_text_markdown.md  deep-research-report.md
sitecore-ai-automation/scrapper/helpers/: _fix-content.js  components.css  discover-pages.js  download-assets.js  download-react-assets.js  examine-site.js  export-manifest.js  extract-components.js  extract-content.js  extract-design-system.js  extract-interactions.js  extract-layout.js  extract-responsive.js  orchestrate.js  (+11 more)
(+431 files in other folders)
