[project]
name = "web-to-sitecore-structure"
version = "0.1.0"
description = "Autonomous web scraper that converts any website into Sitecore XM Cloud component structure"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "tinycss2>=1.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ui = ["streamlit>=1.30"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.ruff]
line-length = 120
target-version = "py310"
